--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link
-         rel="icon"
-         type="image/png"
-         href="/images/logo/Logo CORE IT only.png"
-      />
+      <link rel="icon" type="image/png" href="/public/roomit-logo.png" />
       <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
       <link
@@ -15,7 +11,7 @@
          rel="stylesheet"
       />
 
-      <title>Template React Bintang Al Fizar</title>
+      <title>Roomit</title>
    </head>
    <body>
       <div id="root"></div>
